--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,11 @@ nav {
   font-family: Mask-Reg, sans-serif;
   font-size: 30px;
   text-decoration: none;
-  padding: 20px;
+  padding: 15px;
+  transition: 500ms;
 }
 .navButton:hover {
-  transition: box-shadow 0.4s ease-in-out;
+  transition: 500ms;
   background-color: red;
   opacity: 0.6;
   border-radius: 15px;
@@ -90,6 +91,7 @@ footer {
   justify-content: center;
   height: 40px;
   font-family: Mask-Reg;
+  height: 80px;
 }
 
 /* CHARACTERS PAGE */
@@ -112,6 +114,15 @@ footer {
   width: 200px;
   background-color: darkred;
   padding: 15px;
+  text-decoration: none;
+  transition: 500ms;
+}
+
+.characterCard:hover {
+  box-shadow: 0 0 50px rgb(255, 253, 253);
+  transform: scale(1.1);
+  transition-duration: 500ms;
+  cursor: pointer;
 }
 
 .charactersImage {
@@ -122,8 +133,23 @@ footer {
 
 .charactersName {
   background-color: darkred;
-  font-family: Sunday-Reg, sans-serif;
+  font-family: monospace;
   text-align: center;
   margin-top: 20px;
   font-size: 20px;
+}
+
+.search {
+  font-size: 25px;
+  width: 400px;
+  border-radius: 15px;
+  height: 40px;
+}
+
+/* CARDS */
+/* CARDS */
+/* CARDS */
+
+.card {
+  display: flex;
 }
